# wg21-paperlint

./: .env.example  .gitignore  CLAUDE.md  DESIGN.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: notify-superproject-vendor-pin.yml  tests.yml
.plans/: integration-notes-sd4-cutover-2026-04-20.md  sd4-paper-requirements-2026-04-20.md
output-sd4-v2-smoke/N5035/: evaluation.json  meta.json  paper.md
output-sd4-v2-smoke/P2929R2/: 1-findings.json  2-gate.json  evaluation.json  meta.json  paper.md
output-sd4-v2-smoke/P3642R4/: 1-findings.json  2-gate.json  evaluation.json  meta.json
output-sd4-v2-smoke/P3874R1/: evaluation.json  meta.json  paper.md
output-sd4-v2-smoke/P4026R0/: evaluation.json  meta.json  paper.md
output-sd4-v4/N5035/: review.md
output-sd4-v4/N5036/: paper.md
output-sd4-v4/N5037/: paper.md  review.md
output-sd4-v4/P0876R22/: paper.md
output-sd4-v4/P2000R5/: paper.md
output-sd4-v4/P2285R1/: paper.md
output-sd4-v4/P2583R0/: paper.md  review.md
output-sd4-v4/P2728R11/: paper.md
output-sd4-v4/P2929R2/: review.md
output-sd4-v4/P2953R4/: paper.md
output-sd4-v4/P2964R2/: paper.md  review.md
output-sd4-v4/P3045R7/: paper.md  review.md
output-sd4-v4/P3181R1/: paper.md  review.md
output-sd4-v4/P3385R7/: paper.md
output-sd4-v4/P3411R5/: paper.md
output-sd4-v4/P3440R2/: paper.md
output-sd4-v4/P3596R0/: paper.md
output-sd4-v4/P3642R4/: paper.md  review.md
output-sd4-v4/P3666R3/: paper.md  review.md
output-sd4-v4/P3688R6/: paper.md
output-sd4-v4/P3724R3/: paper.md
output-sd4-v4/P3737R3/: paper.md  review.md
output-sd4-v4/P3816R2/: paper.md
output-sd4-v4/P3822R1/: paper.md
output-sd4-v4/P3844R3/: paper.md  review.md
output-sd4-v4/P3844R4/: paper.md
output-sd4-v4/P3856R4/: paper.md
output-sd4-v4/P3856R5/: paper.md
output-sd4-v4/P3864R1/: paper.md
output-sd4-v4/P3874R1/: review.md
output-sd4-v4/P3876R1/: paper.md
output-sd4-v4/P3899R1/: paper.md  review.md
output-sd4-v4/P3904R1/: paper.md  review.md
output-sd4-v4/P3932R0/: paper.md  review.md
output-sd4-v4/P3936R1/: paper.md
output-sd4-v4/P3938R1/: paper.md  review.md
output-sd4-v4/P3941R2/: paper.md
output-sd4-v4/P3953R1/: paper.md  review.md
output-sd4-v4/P3966R0/: paper.md
output-sd4-v4/P3969R0/: paper.md
output-sd4-v4/P3970R0/: paper.md
output-sd4-v4/P3971R0/: paper.md  review.md
output-sd4-v4/P3973R0/: paper.md  review.md
output-sd4-v4/P3977R0/: paper.md  review.md
output-sd4-v4/P3978R0/: paper.md
output-sd4-v4/P3978R1/: paper.md
output-sd4-v4/P3978R2/: paper.md
output-sd4-v4/P3980R0/: paper.md
output-sd4-v4/P3981R0/: paper.md  review.md
output-sd4-v4/P3981R1/: paper.md  review.md
output-sd4-v4/P3982R0/: paper.md  review.md
output-sd4-v4/P3983R0/: paper.md
output-sd4-v4/P3984R0/: paper.md
output-sd4-v4/P3985R0/: paper.md  review.md
output-sd4-v4/P4003R0/: paper.md  review.md
output-sd4-v4/P4004R0/: paper.md  review.md
output-sd4-v4/P4005R0/: paper.md
output-sd4-v4/P4006R0/: paper.md
output-sd4-v4/P4007R0/: paper.md
output-sd4-v4/P4008R0/: paper.md  review.md
output-sd4-v4/P4009R0/: paper.md  review.md
paperlint/: __main__.py  extract.py  mailing.py  models.py  orchestrator.py  rubric.md  storage.py  suppress.py
plans/: QA-001-extend-qa-scoring.md  QA-002-mpark-wording-support.md  QA-003-tomd-deep-analysis.md
reports/: QA-001-extend-qa-scoring.md
review-preview/: N5036.md  P0876R22.md  P2000R5.md  P2285R1.md  P2728R11.md  P2953R4.md  P3385R7.md  P3411R5.md  P3440R2.md  P3596R0.md  P3688R6.md  P3724R3.md  P3816R2.md  P3822R1.md  P3844R4.md  P3856R4.md  P3856R5.md  P3864R1.md  P3876R1.md  P3936R1.md  P3941R2.md  P3966R0.md  P3969R0.md  P3970R0.md  P3978R0.md  P3978R1.md  P3978R2.md  P3980R0.md  P3983R0.md  P3984R0.md  P4005R0.md  P4006R0.md  P4007R0.md  P4010R0.md  P4011R0.md  P4012R0.md  P4015R0.md  P4020R0.md  P4021R0.md  P4023R0.md  (+4 more)
tests/: test_end_to_end_convert.py  test_metadata_contract.py  test_storage.py  test_suppress.py
tomd/: pyproject.toml  vendor.md
(+32 files in other folders)
