[project]
name = "paperlint"
version = "0.1.0"
description = "WG21 C++ standards paper evaluation pipeline"
requires-python = ">=3.12"
license = {text = "BSL-1.0"}
authors = [{name = "Sergio DuBois", email = "sentientsergio@gmail.com"}]

dependencies = [
    "paperstore",
    "mailing",
    "tomd",
    "openai",
    "python-dotenv",
    "beautifulsoup4~=4.14.0",
    "requests",
]

[project.optional-dependencies]
test = [
    "pytest~=8.0",
]

[dependency-groups]
dev = [
    "pytest~=8.0",
]

[project.scripts]
paperlint = "paperlint.__main__:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["paperlint*"]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
paperstore = {workspace = true}
mailing    = {workspace = true}
tomd       = {workspace = true}

[tool.pytest.ini_options]
testpaths = [
    "tests",
    "packages/paperstore/tests",
    "packages/mailing/tests",
    "packages/tomd/tests",
]
