[project]
name = "wg21-paperflow"
version = "0.1.0"
description = "WG21 paperflow monorepo: paperstore + mailing + tomd + paperlint"
requires-python = ">=3.12"
license = {text = "BSL-1.0"}
authors = [{name = "Sergio DuBois", email = "sentientsergio@gmail.com"}]
dependencies = [
    "paperstore",
    "mailing",
    "tomd",
    "paperlint",
]

[dependency-groups]
dev = ["pytest~=8.0", "ruff~=0.6"]

[tool.uv]
package = false

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
paperstore = {workspace = true}
mailing    = {workspace = true}
tomd       = {workspace = true}
paperlint  = {workspace = true}

[tool.pytest.ini_options]
testpaths = [
    "packages/paperstore/tests",
    "packages/mailing/tests",
    "packages/tomd/tests",
    "packages/paperlint/tests",
    "tests",
]
