[project]
name = "wg21-paperflow"
version = "0.2.0"
description = "WG21 paperflow monorepo: paperstore + mailing + tomd + paperlint"
requires-python = ">=3.12"
license = {text = "BSL-1.0"}
authors = [{name = "Sergio DuBois", email = "sentientsergio@gmail.com"}]
dependencies = [
    "paperstore",
    "mailing",
    "tomd",
    "paperlint",
]

[dependency-groups]
dev = ["pytest~=8.0", "ruff~=0.6"]

[tool.uv]
package = false

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
paperstore = {workspace = true}
mailing    = {workspace = true}
tomd       = {workspace = true}
paperlint  = {workspace = true}

[tool.pytest.ini_options]
testpaths = [
    "packages/paperstore/tests",
    "packages/mailing/tests",
    "packages/tomd/tests",
    "packages/paperlint/tests",
    "tests",
]

[tool.ruff.lint.per-file-ignores]
# Tests intentionally:
#   F811: re-export pytest fixtures with `from x import store  # noqa: F401`
#         then take `store` as a parameter, which ruff reads as redefinition.
#   F841: assign to a variable to call a function for its side effects, then
#         assert on the side-effected object instead of the return value.
#   E741: use single-letter `l` as a stand-in for `line` in tight scopes.
#   E402: insert sys.path before importing the package under test when run
#         as a script (test_suppress, test_emit).
"**/tests/**" = ["F811", "F841", "E741", "E402"]
