[project]
name = "tomd"
version = "0.1.0"
description = "PDF and HTML to Markdown converter for WG21 papers"
requires-python = ">=3.12"
license = {text = "BSL-1.0"}
authors = [{name = "Vinnie Falco", email = "vinnie.falco@gmail.com"}]
dependencies = [
    "pymupdf~=1.27.0",
    "beautifulsoup4~=4.14.0",
]

[project.optional-dependencies]
qa = [
    "mistune~=3.2",
]

[project.scripts]
tomd = "tomd.main:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
tomd = "."

[tool.setuptools]
packages = ["tomd", "tomd.lib", "tomd.lib.pdf", "tomd.lib.html"]
